Changed GA property

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
                 </div>
                 <div class="col-sm-12 hidden-xs">
                   <p>I'm a curious person that started studying statistics, has been working as a web developer for +10 years, and for my last 6 years I've leaned towards  data engineering, <strong>data analysis/science</strong> and <strong>experimentation</strong>.</p>
-                  <p>I live in Barcelona with my family, and find the spare time go hiking, running or simply playing.</p>
                   <p>Whichever initiative that fits into those areas is a potential area of interest to me.</p>
+                  <p>I live in Barcelona with my family, and find the spare time go hiking, running or playing.</p>
                 </div>
                 <div class="col-sm-12 hidden-xs">
                   <h3>Some examples:</h3>
