--- a/index.html
+++ b/index.html
@@ -93,12 +93,22 @@
              is a potential area of interest to me.</p>
         </div>
         <div class="col-xs-12" rel="icons">
-          <h3 class="text-left">Want to contact?</h3>
-          <p class="text-left">I've left out a lot of details: almost twenty years of
-             work experience don't fill into a webpage. But if you
-             find my resume interesting, you can <strong>contact me through
-             Twitter or LinkedIn</strong>. Find the links below.</p>
+          <a target="_new" href="https://linkedin.com/in/marioalberich">
+            <span class="btn-sm icon fa fa-2x fa-linkedin"></span>
+          </a>
+          <a target="_new" href="https://twitter.com/marioalberich">
+            <span class="btn-sm icon fa fa-2x fa-twitter"></span>
+          </a>
+          <a target="_new" href="https://github.com/malberich">
+            <span class="btn-sm icon fa fa-2x fa-github"></span>
+          </a>
         </div>
+        <div class="col-xs-12">
+            <h3>Some examples:</h3>
+            <p><a href="/motoviz" target="_blank">Motorcycle dataviz &raquo;</a></p>
+            <p><a href="/elixir-beacon" target="_blank">Elixir Beacon UI &raquo;</a></p>
+            <p><a href="/postgrad-capstone-project" target="_blank">Minteressa capstone project &raquo;</a></p>
+          </div>
       </div>
     </div>
     <div class="col-xs-12 col-md-10 col-md-offset-2">
@@ -186,32 +196,26 @@
           </table>
         </div>
         <div class="col-md-4 col-xs-6">
-          <h2><span class="icon fa fa-lightbulb-o"></span>&nbsp;&nbsp;Soft skills</h2>
+          <h2><span class="icon fa fa-lightbulb-o"></span>&nbsp;&nbsp;Values</h2>
           <table id="language-table">
             <tbody>
               <tr class="dc-table-row">
-                <td class="dc-table-column _0"><span class="language">Both autonomous and team work</span></td>
+                <td class="dc-table-column _0"><span class="language">Curiosity</span></td>
               </tr>
               <tr class="dc-table-row">
-                <td class="dc-table-column _0"><span class="language">Self-demanding</span></td>
+                <td class="dc-table-column _0"><span class="language">Collaboration</span></td>
               </tr>
               <tr class="dc-table-row">
-                <td class="dc-table-column _0"><span class="language">Team leadership</span></td>
+                <td class="dc-table-column _0"><span class="language">Trustworthiness</span></td>
               </tr>
               <tr class="dc-table-row">
-                <td class="dc-table-column _0"><span class="language">Interdisciplinary approach</span></td>
+                <td class="dc-table-column _0"><span class="language">Innovation</span></td>
               </tr>
               <tr class="dc-table-row">
-                <td class="dc-table-column _0"><span class="language">Results oriented</span></td>
+                <td class="dc-table-column _0"><span class="language">Accountability</span></td>
               </tr>
               <tr class="dc-table-row">
-                <td class="dc-table-column _0"><span class="language">Innovative</span></td>
-              </tr>
-              <tr class="dc-table-row">
-                <td class="dc-table-column _0"><span class="language">Logic and analytic</span></td>
-              </tr>
-              <tr class="dc-table-row">
-                <td class="dc-table-column _0"><span class="language">Self-learning</span></td>
+                <td class="dc-table-column _0"><span class="language">Diversity</span></td>
               </tr>
             </tbody>
           </table>
